CTPS toplist metric + manual expansion of list length + better styling

--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 body{
     font-family: Consolas;
 }
+
+.noselect {
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;                
+}
+
 canvas#canvas{
     z-index: 1;
     border: 1px solid #000000;
-    margin: 0px auto 60px;
+    margin: 0 auto 60px;
     display: block;
 }
 
@@ -28,6 +38,10 @@ tbody>tr:nth-child(odd) {
     background-color: #f2f2f2;
 }
 
+tbody>tr>td:nth-child(2) {
+    text-align: left;
+}
+
 tbody{
     cursor: pointer;
     text-align: right;
@@ -35,12 +49,23 @@ tbody{
 
 table, th, td {
     border: 0px solid black;
+    padding: 2px 6px;
 }
+
 thead {
-    text-align: center;
+    text-align: right;
     background-color: #ffffff !important;
     font-size: 15px;
     font-weight: bold;
+}
+thead>tr>td:nth-child(2) {
+    text-align: left;
+}
+
+div#toplist-more{
+    margin: 0 auto;
+    display: table;
+    cursor: pointer;
 }
 
 div#tooltip{
