--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,17 @@ div#toplist_wrapper{
 
 div#minNumberOfTxWrapper{
     font-size: 14px;
-    margin: 0 0 0 34px;
+    margin: 0 0 15px 10px;
+    float: left;
 }
 
 input#minNumberOfTxIncluded{
     width: 50px;
+}
+
+div#hideZeroValue{
+    margin: 0 32px 15px 0;
+    float: right;
 }
 
 div#toplist-more{
