--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ input#minNumberOfTxIncluded{
     width: 50px;
 }
 
-div#hideZeroValue{
+div#hideZeroValue, div#endlessModeWrapper{
     margin: 0 50px 15px 0;
     float: right;
 }
