--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body{
     text-align: center;
 }
 
+.hide{
+  display: none !important;
+}
+
 .noselect {
   -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -38,13 +42,32 @@ div#minNumberOfTxWrapper{
     float: left;
 }
 
-input#minNumberOfTxIncluded{
+div#txToPollWrapper{
+    font-size: 14px;
+    margin: 0 0 15px 30px;
+    float: left;
+}
+
+div#loadingTX{
+  display: inline-block;
+}
+
+div#loadingTX > img{
+  width: 15px;
+}
+
+input#minNumberOfTxIncluded, input#txToPoll{
     width: 50px;
 }
 
 div#hideZeroValue, div#endlessModeWrapper{
     margin: 0 50px 15px 0;
     float: right;
+}
+
+div#loadingTX{
+  width: 15px;
+  height: 15px;
 }
 
 .toplist{
