Indicate mainnet as title

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,11 @@ div#loadingTX {
   height: 15px;
 }
 
+.net_title {
+  font-size: 18px;
+  margin: 0 auto 25px;
+}
+
 .toplist {
   display: inline-block;
   cursor: pointer;
